# gauge-oracle

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_paper.yml  test.yml
calculations/: __init__.py  benchmark.py  tm_1d.py
calculations/examples/: ghz_3q.py  random_clifford_t.py
calculations/transfer_matrix/: __init__.py  benchmark.py  tm_1d.py
experiments/1d_chain/: run_tm_simulation.py
experiments/2d_lattice/: README.md  tm_size_vs_slice.py
experiments/benchmark/: tm_1d_benchmark.csv
experiments/plots/: plot_timing.py
extras/: README.md
paper/: abstract.tex  bibliography.bib  main.tex
paper/figures/: 1d_chain_defects.tex  2d_lattice_slice.tex  transfer_matrix.tikz
paper/sections/: 01_intro.tex  02_gauge_construction.tex  03_1d_polynomial.tex  04_2d_breakdown.tex  05_defect_complexity.tex  06_extensions.tex  07_conclusion.tex
tests/: test_additional.py  test_benchmark.py  test_theory.py  test_tm_1d.py  utils.py
theory/: __init__.py  clifford_ops.py  defects.py  gauge_group.py  lattice.py  observables.py  states.py
